# scanctum

./: .env.example  .gitignore  Caddyfile  DEPLOY.md  DEPLOYMENT.md  EXPLAIN.md  README.md  docker-compose.prod.yml  docker-compose.yml  render.yaml
backend/: .dockerignore  Dockerfile  alembic.ini  check_tables.py  create_tables.py  entrypoint-render.sh  pyproject.toml  test_bcrypt.py  test_http_signup.py  test_signup.py
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py
backend/app/: config.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: assets.py  auth.py  comparisons.py  dashboard.py  reports.py  router.py  scans.py  schedules.py  vulnerabilities.py  ws.py
backend/app/core/: middleware.py  security.py
backend/app/db/: base.py  engine.py  session.py
backend/app/models/: __init__.py  audit.py  comparison.py  result.py  scan.py  user.py
backend/app/scanner/: crawler.py  http_client.py  orchestrator.py  rate_limiter.py  scope.py
backend/app/scanner/modules/: api_misconfig.py  base.py  command_injection.py  cookie_security.py  cors.py  crlf_injection.py  csrf.py  graphql.py  (+17 more)
backend/app/schemas/: auth.py  common.py  comparison.py  dashboard.py  report.py  result.py  scan.py
backend/app/services/: auth_service.py  comparison_service.py  dashboard_service.py  report_service.py  result_service.py  scan_service.py
backend/app/tasks/: celery_app.py  report_tasks.py  scan_tasks.py
backend/tests/: conftest.py  test_auth.py  test_scans.py
backend/tests/test_scanner/: test_crawler.py  test_modules.py  test_scoring.py
(+48 files in other folders)
