[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scanctum"
version = "0.1.0"
description = "Modular web application security scanner"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.128",
    "uvicorn[standard]>=0.34",
    "pydantic[email]>=2.12",
    "pydantic-settings>=2.7",
    "sqlalchemy[asyncio]>=2.0.46",
    "asyncpg>=0.30",
    "psycopg2-binary>=2.9",
    "alembic>=1.15",
    "celery[redis]>=5.6",
    "redis>=5.0",
    "httpx>=0.28",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "weasyprint>=63",
    "xhtml2pdf>=0.2.17",
    "Jinja2>=3.1",
    "passlib[bcrypt]>=1.7",
    "bcrypt==3.2.0",
    "python-jose[cryptography]>=3.3",
    "python-multipart>=0.0.18",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.28",
    "factory-boy>=3.3",
    "aiosqlite>=0.20",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
